--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
                     </div>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="/contact.html">Contact</a>
+                    <a class="nav-link" href="Heaven-for-Programmars/contact.html">Contact</a>
                 </li>
 
                 <li class="nav-item">
