--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <a class="nav-link" href="/Heaven-for-Programmars/">Home <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/about.html">About</a>
+                    <a class="nav-link" href="/Heaven-for-Programmars/about.html">About</a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
@@ -44,7 +44,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/contact.html">Contact</a>
+                    <a class="nav-link" href="/Heaven-for-Programmars/contact.html">Contact</a>
                 </li>
 
                 <li class="nav-item">
